<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/dialog_round_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pub_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp"
            android:text="@string/tips"
            android:textColor="@color/common_black"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_split_line" />

        <LinearLayout
            android:id="@+id/layoutBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_selector_corner_left_bottom"
                android:text="@string/cancel"
                android:textColor="@color/text_blue" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/list_split_line" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selector_bg_selector_corner_right_bottom"
                android:text="@string/confirm"
                android:textColor="@color/common_black" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOkBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_selector_corner_right_bottom"
            android:text="@string/i_know"
            android:textColor="@color/text_blue"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>