<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutBtns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <Button
                android:id="@+id/tvCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="45dp"
                android:padding="10dp"
                android:text="@string/take_photo"
                android:textColor="@color/common_black"
                android:textStyle="bold" />


            <View
                android:id="@+id/imageview"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:contentDescription="@null"
                android:background="@color/graytext"/>

            <Button
                android:id="@+id/tvPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="45dp"
                android:padding="10dp"
                android:text="@string/album"
                android:textColor="@color/common_black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tvSystemPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="45dp"
                android:padding="10dp"
                android:text="@string/system_album"
                android:textColor="#037AFF"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="45dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/common_black"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>