<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_two_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/common_black"
            android:lineSpacingExtra="5dp"
            android:text="@string/confirm_name_to_view_product_details"
            />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff4f4f4"
            />
        <LinearLayout
            android:id="@+id/ll_btn_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <Button
                android:id="@+id/btn_left"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next_time_again_say"
                android:textSize="15sp"
                android:textColor="@color/graytext"
                 />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#fff4f4f4"
                />
            <Button
                android:id="@+id/btn_right"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/to_confirm"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_btn_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <Button
                android:id="@+id/btn_center"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next_time_again_say"
                android:textSize="15sp"
                android:textColor="@color/graytext"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

